force-app/main/default/objects/SetupValue__c/SetupValue__c.object-meta.xml
<CustomObject>
    <label>Setup Value</label>
    <nameField>
        <label>Setup Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>