force-app/main/default/objects/SetupValue__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <description>Any abbreviation available for the setup value.</description>
    <inlineHelpText>Any abbreviation available for the setup value.</inlineHelpText>
    <label>Abbreviation</label>
    <length>24</length>
    <type>Text</type>
</CustomField>