force-app/main/default/objects/SetupValue__c/fields/AlternateAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviation__c</fullName>
    <description>Abbreviation in alternate language.</description>
    <inlineHelpText>Abbreviation in alternate language.</inlineHelpText>
    <label>Alternate Abbreviation</label>
    <length>24</length>
    <type>Text</type>
</CustomField>