force-app/main/default/objects/SetupValue__c/fields/AlternateAbbreviationEL__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationEL__c</fullName>
    <description>Abbreviation in Greek.</description>
    <inlineHelpText>Abbreviation in Greek.</inlineHelpText>
    <label>Alternate Abbreviation EL</label>
    <length>24</length>
    <type>Text</type>
</CustomField>