force-app/main/default/objects/SetupValue__c/fields/AlternateAbbreviationES__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationES__c</fullName>
    <description>Abbreviation in Spanish.</description>
    <inlineHelpText>Abbreviation in Spanish.</inlineHelpText>
    <label>Alternate Abbreviation ES</label>
    <length>24</length>
    <type>Text</type>
</CustomField>