force-app/main/default/objects/SetupValue__c/fields/AlternateAbbreviationJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationJA__c</fullName>
    <description>Abbreviation in Japanese.</description>
    <inlineHelpText>Abbreviation in Japanese.</inlineHelpText>
    <label>Alternate Abbreviation JA</label>
    <length>24</length>
    <type>Text</type>
</CustomField>