force-app/main/default/objects/SetupValue__c/fields/AlternateAbbreviationPL__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationPL__c</fullName>
    <description>Abbreviation in Polish.</description>
    <inlineHelpText>Abbreviation in Polish.</inlineHelpText>
    <label>Alternate Abbreviation PL</label>
    <length>24</length>
    <type>Text</type>
</CustomField>