force-app/main/default/objects/SetupValue__c/fields/AlternateAbbreviationPTBR__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationPTBR__c</fullName>
    <description>Abbreviation in Portuguese (Brazil).</description>
    <inlineHelpText>Abbreviation in Portuguese (Brazil).</inlineHelpText>
    <label>Alternate Abbreviation PTBR</label>
    <length>24</length>
    <type>Text</type>
</CustomField>