force-app/main/default/objects/SetupValue__c/fields/AlternateAbbreviationPTPT__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationPTPT__c</fullName>
    <description>Abbreviation in Portuguese (Portugal).</description>
    <inlineHelpText>Abbreviation in Portuguese (Portugal).</inlineHelpText>
    <label>Alternate Abbreviation PTPT</label>
    <length>24</length>
    <type>Text</type>
</CustomField>