force-app/main/default/objects/SetupValue__c/fields/AlternateAbbreviationRU__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationRU__c</fullName>
    <description>Abbreviation in Russian.</description>
    <inlineHelpText>Abbreviation in Russian.</inlineHelpText>
    <label>Alternate Abbreviation RU</label>
    <length>24</length>
    <type>Text</type>
</CustomField>