force-app/main/default/objects/SetupValue__c/fields/AlternateAbbreviationZHCN__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationZHCN__c</fullName>
    <description>Abbreviation in Chinese (Simplified).</description>
    <inlineHelpText>Abbreviation in Chinese (Simplified).</inlineHelpText>
    <label>Alternate Abbreviation ZHCN</label>
    <length>24</length>
    <type>Text</type>
</CustomField>