force-app/main/default/objects/SetupValue__c/fields/AlternateName__c.field-meta.xml
<CustomField>
    <fullName>AlternateName__c</fullName>
    <description>Value in alternate language.</description>
    <inlineHelpText>Value in alternate language.</inlineHelpText>
    <label>Alternate Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>