force-app/main/default/objects/SetupValue__c/fields/AlternateNameENUS__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameENUS__c</fullName>
    <description>Name in English.</description>
    <inlineHelpText>Name in English.</inlineHelpText>
    <label>Alternate Name ENUS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>