force-app/main/default/objects/SetupValue__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>When MasterSource == \</description>
    <inlineHelpText>When MasterSource == \</inlineHelpText>
    <label>Location</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>SetupValueLocation</relationshipName>
    <type>Lookup</type>
</CustomField>