force-app/main/default/objects/SetupValue__c/fields/MasterSource__c.field-meta.xml
<CustomField>
    <fullName>MasterSource__c</fullName>
    <description>Indicates whether this value is Property specific or Corporate and available to all properties. PICKLIST OPTIONS ARE FIXED BY DELPHI.FDC: DO NOT MODIFY.</description>
    <inlineHelpText>Indicates whether this value is Property specific or Corporate and available to all properties. PICKLIST OPTIONS ARE FIXED BY DELPHI.FDC: DO NOT MODIFY.</inlineHelpText>
    <label>Master Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>