force-app/main/default/objects/SetupValue__c/fields/SetupValueType__c.field-meta.xml
<CustomField>
    <fullName>SetupValueType__c</fullName>
    <description>Indicates the setup value category such as LeadSource, MarketSegment, or HousingMethod. PICKLIST OPTIONS ARE FIXED BY DELPHI.FDC: DO NOT MODIFY.</description>
    <inlineHelpText>Indicates the setup value category such as LeadSource, MarketSegment, or HousingMethod. PICKLIST OPTIONS ARE FIXED BY DELPHI.FDC: DO NOT MODIFY.</inlineHelpText>
    <label>Setup Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>