force-app/main/default/objects/SetupValue__c/fields/SetupValueTypeIndexed__c.field-meta.xml
<CustomField>
    <fullName>SetupValueTypeIndexed__c</fullName>
    <description>System Field: Do Not Use. Field that should never be directly edited and hidden on layouts, driven my the master source field and used for queries as an indexed field</description>
    <inlineHelpText>System Field: Do Not Use. Field that should never be directly edited and hidden on layouts, driven my the master source field and used for queries as an indexed field</inlineHelpText>
    <label>Setup Value Type Indexed</label>
    <length>40</length>
    <type>Text</type>
</CustomField>