force-app/main/default/objects/SetupValue__c/fields/UniqueExternalId__c.field-meta.xml
<CustomField>
    <fullName>UniqueExternalId__c</fullName>
    <description>System Field: Do Not Use. The automatically calculated org-wide unique ID for the record, comprised of the SourceSystemExternalId and ExternalId.</description>
    <inlineHelpText>System Field: Do Not Use. The automatically calculated org-wide unique ID for the record, comprised of the SourceSystemExternalId and ExternalId.</inlineHelpText>
    <label>Unique External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>